added new tests for views

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,5 +14,12 @@
             ],
             "django": true
         }
+        {
+            "name": "Python: Test debug config",
+            "type": "python",
+            "request": "test",
+            "console": "integratedTerminal",
+            "logToFile": true
+        }
     ]
 }
